modified art section

--- a/_includes/about_friends.html
+++ b/_includes/about_friends.html
@@ -19,6 +19,9 @@
 <a href="http://www.tech-thoughts-blog.com/">rahmu</a>
 </div>
 <div class="email friends">
+<a href="https://slothkrew.com/">dot|not</a>
+</div>
+<div class="email friends">
 <a href="http://thecodeship.com/">ayman</a>
 </div>
 <div class="email friends">
