--- a/_includes/all_foods.html
+++ b/_includes/all_foods.html
@@ -49,3 +49,5 @@
 {% include recipe_template.html name="Eggplants With Sauce And Rice" img="26" description="You melt the onions, add the eggplant slices. Let them fry a bit. Then you pour the sauce and let it boil down. The sauce is made of tomatoes, basil, spices, and mushrooms. All is served on a sticky white rice." %}
 
 {% include recipe_template.html name="Full Grain Pasta With Lentils Sauce" img="27" description="A recipe to boost you up! It takes time to cook the lentils so they are tenders so be patient." %}
+
+{% include recipe_template.html name="Pasta Primavera" img="28" description="Al dente spaghetti with fresh vegetables. Caramelized onions, carrots, tomatoes, mushrooms, and basilique." %}
