--- a/_includes/header_arts.html
+++ b/_includes/header_arts.html
@@ -2,19 +2,7 @@
 <!--
 	The head of the arts
 -->
-<div class="wrapper">
+<div class="wrapper_head">
 	<!--<h2> <a href="{{ site.url }}{{site.baseurl}}" id="blog_title">Back To Blog</a></h2>-->
-	<h2> <a href="{{ site.url }}{{site.baseurl}}" id="blog_title">Venam's Art Page</a></h2>
-</div>
-
-<div class="wrapper">
-	<div class="post">
-		<header class="post-header">
-			<hr/>
-			<h1>Artistic Works</h1>
-			Nothing fancy. I threw a lot of my old pieces.<br/>
-			On this page live the images of some remnants plus brand new inventions.
-			<hr/>
-		</header>
-	</div>
+	<div id="art_title"><img id="art_title_img" src="{{site.baseurl}}/assets/arts/art_title.svg"></img></div>
 </div>
