--- a/_includes/about_profiles.html
+++ b/_includes/about_profiles.html
@@ -39,4 +39,15 @@
 		Reddit
 	</a>
 </div>
+<div class="email">
+	<a href="http://www.wechall.net/profile/kamel_louis">
+		WeChall
+	</a>
+</div>
+<div class="email">
+	<a href="http://communitydigest.io/">
+		MENA Devs Network
+	</a>
+</div>
+
 <hr/>
