--- a/_includes/others.html
+++ b/_includes/others.html
@@ -3,16 +3,10 @@
 </header>
 
 <div class="about_section">
-	<span  class="clickable colored big" onClick="showOther('arts')" href="">Arts</span>
-	<span id="other_arts"  class="hidden"> find some of my arts  <a href="{{site.baseurl}}/arts.html" >here</a>
-	</span>
+	<a class="clickable colored big" href="{{site.baseurl}}/arts.html">Arts</a>
 </div>
 <div class="about_section">
-	<span  class="clickable colored big" onClick="showOther('cooking')" href="">Cooking</span>
-	<span id="other_cooking"   class="hidden">
-				Checkout a page about my cooking skills.
-				<a href="{{site.baseurl}}/food.html" >here</a>
-	</span>
+	<a class="big colored clickable" href="{{site.baseurl}}/food.html">Cooking</a>
 </div>
 <div class="about_section">
 	<span class="clickable colored big" onClick="showOther('poems')" href="">Poems</span>
@@ -44,10 +38,7 @@
 	</div>
 </div>
 <div class="about_section">
-	<span  class="clickable colored big" onClick="showOther('quotes')" href="">Quotes</span>
-	<span id="other_quotes"   class="hidden">
-		Find them <a href="http://venam.nixers.net/quotes.txt" target="_blank">here</a>
-	</span>
+	<a  class="clickable colored big" href="http://venam.nixers.net/quotes.txt">Quotes</a>
 </div>
 <div class="about_section">
 	<span class="clickable colored big" onClick="showOther('scrots')" href="">Screenshots</span>
