--- a/_includes/all_foods.html
+++ b/_includes/all_foods.html
@@ -51,3 +51,5 @@
 {% include recipe_template.html name="Full Grain Pasta With Lentils Sauce" img="27" description="A recipe to boost you up! It takes time to cook the lentils so they are tenders so be patient." %}
 
 {% include recipe_template.html name="Pasta Primavera" img="28" description="Al dente spaghetti with fresh vegetables. Caramelized onions, carrots, tomatoes, mushrooms, and basilique." %}
+
+{% include recipe_template.html name="Mashed Potatoes With Cheese" img="29" description="Mashe potatoes with butter and melted cheese topped with olive oil and fresh basil. Accompanied by toast and bri cheese." %}
