--- a/_includes/all_foods.html
+++ b/_includes/all_foods.html
@@ -53,3 +53,9 @@
 {% include recipe_template.html name="Pasta Primavera" img="28" description="Al dente spaghetti with fresh vegetables. Caramelized onions, carrots, tomatoes, mushrooms, and basilique." %}
 
 {% include recipe_template.html name="Mashed Potatoes With Cheese" img="29" description="Mashe potatoes with butter and melted cheese topped with olive oil and fresh basil. Accompanied by toast and bri cheese." %}
+
+{% include recipe_template.html name="Hot Pot With Bread" img="30" description="Chick Peas with potatoes." %}
+
+{% include recipe_template.html name="Onions and Cream Sauce over mashed potatoes" img="31" description="" %}
+
+{% include recipe_template.html name="General Tsos's Chickpeas" img="32" description="" %}
