--- a/_includes/others.html
+++ b/_includes/others.html
@@ -38,7 +38,7 @@
 	</div>
 </div>
 <div class="about_section">
-	<a  class="clickable colored big" href="http://venam.nixers.net/quotes.txt">Quotes</a>
+	<a class="clickable colored big" href="{{site.baseurl}}/quotes.html" >Quotes</a>
 </div>
 <div class="about_section">
 	<span class="clickable colored big" onClick="showOther('scrots')" href="">Screenshots</span>
