--- a/_includes/header_arts.html
+++ b/_includes/header_arts.html
@@ -2,6 +2,17 @@
 <!--
 	The head of the arts
 -->
+
+<script>
+ (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+	  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+	   })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+ ga('create', 'UA-73154312-1', 'auto');
+  ga('send', 'pageview');
+
+</script>
 <div class="wrapper_head">
 	<!--<h2> <a href="{{ site.url }}{{site.baseurl}}" id="blog_title">Back To Blog</a></h2>-->
 	<div id="art_title"><img id="art_title_img" src="{{site.baseurl}}/assets/arts/art_title.svg"></img></div>
