quotes page and a little fix

--- a/_includes/all_quotes.html
+++ b/_includes/all_quotes.html
@@ -1,6 +1,83 @@
 {% include  quote_template.html author="An old saying" quote="Haste Makes Waste." %}
 
-
 {% include  quote_template.html author="In an anime" quote="Never be satisfied, that's the way you'll fall short. See past yourself." %}
 
+{% include  quote_template.html author="Elwyn Brooks “E. B.” White" quote="The best writing is rewriting." %}
+
 {% include  quote_template.html author="Anonymous" quote="Never wrestle with a pig. you'll both get dirty and the pig likes it." %}
+
+
+{% include  quote_template.html author="Someone" quote="No matter how it looks at first, it's always a people problem." %}
+
+{% include quote_template.html author="Mark L. Mitchell, Alex Samuel from the 'Advanced Linux Programming' book" quote="For even better randomness, let your cat walk on the keyboard" %}
+
+{% include quote_template.html author="Sam Altman" quote="Are they smart? Do they get things done? Do I want to spend a lot of time around them?" %}
+
+{% include quote_template.html author="Not found" quote="Does the tournament make sense as you keep going?" %}
+
+{% include quote_template.html author="Anonymous" quote="When a relationship isn't going well, don't do more of the same; try something different." %}
+
+{% include quote_template.html author="Tara Ploughman" quote="The less confident you are, the more serious you have to act." %}
+
+{% include quote_template.html author="Anonymous" quote="When a thing looks complicated, it's possible that we're looking at it wrong and missing some of the pieces of the puzzle." %}
+
+{% include quote_template.html author="Anonymous" quote="In any relationship, the person with the most power is the one who needs the other the least." %}
+
+{% include quote_template.html author="Aristotle" quote="We are what we repeatedly do. Excellence, then, is not an act, but a habit." %}
+
+{% include quote_template.html author="Steve Chandler" quote="No == 'can't you be more creative than that?'" %}
+
+{% include quote_template.html author="Anonymous" quote="Don't worship them and they'll worship you." %}
+
+{% include quote_template.html author="Steven Wright" quote="I woke up this morning and discovered that everything in my apartmenthad been stolen and replaced with an exact replica. I told my roommate,'Isn't this amazing? Everything in the apartment has been stolen andreplaced with an exact replica.' He said, 'Do I know you?'" %}
+
+{% include quote_template.html author="Allen Coté" quote="Quand je me regarde dans cette glace, j'entrevois un homme différent quiaffiche les entailles d'un passé tourmenté. Je m,e demande ce qu'est devenucet homme heureux. Un rêve! Disparu, volatilisé comme lorsqu'on casse la glacede l'armoire de pharmacie. La vie ne m'a pas appris beaucoup, si ce n'estqu'il existe pas plus fragile que soi devant son propre reflet. N’étais-jedonc qu'une image et TOI mon miroir?" %}
+
+{% include quote_template.html author="Sylvie Demers" quote="On se regarde de temps a autre comme on regarde sa montre pour s'assurerque le temps passe. Et le temps passera." %}
+
+{% include quote_template.html author="Stanley Pean" quote="Vous ne comprenez pas d'avantage. Mais ce que vous croyez apercevoira cet instant au fond de mes yeux vous fait frissonner, vous oblige areculer.-Tabarnak d'hostie de ciboire! s’écrie l'homme..." %}
+
+
+{% include quote_template.html author="A book" quote="Il faut avertir avant d'observer une minute de silence sinon l'on croit quevous faite simplement vous taire..." %}
+
+{% include quote_template.html author="Patrick Louis" quote="Il faut éviter les étapes de la vie comme ça on vivra plus longtemps..." %}
+
+{% include quote_template.html author="Anton Tchekhov" quote="J'avais devant moi un homme heureux, dont le rêve le plus intime avait étéexaucé de la manière la plus évidente, qui avait atteint dans la vie le butqu'il s’était proposé, obtenu ce qu'il désirait, et qui était satisfait deson destin et de lui-même.Déjà auparavant, a mes pensées sur le bonheurhumain venait toujours s'ajouter, je ne sais pourquoi, quelque chose detriste; mais maintenant a la vue de cet homme heureux, je me sentais envahipar un sentiment pénible, proche du désespoir...Je pensais:comme il y a,somme toute, un grand nombre de gens contents, heureux! Comme c'est uneforce accablante! Regardez donc la vie: insolence et oisiveté des forts,ignorance et bestialité des faibles, rien qu'une misère intolérable,étouffante, rien qu'une dégénérescence, une ivrognerie, une hypocrisie,un éternel mensonge... Et a coté de cela, dans toutes ces maisons, dans lesrues, c'est le silence, le calme. Parmi les cinquante mille habitants de cetteville, pas un seul qui pousse un cri d'alarme, de révolte. Nous voyons tousceux qui vont chercher leurs provisions au marché, et qui le jour mangent,la nuit dorment; ceux qui racontent leurs sottises, se marient, vieillissent,trainent avec placidité leurs morts au cimetière. Mais, nous ne voyons paset n'entendons pas ceux qui souffrent, et tout ce qui est effrayant dans lavie se déroule quelque part dans les coulisses. Tout est calme, paisible,et seules protestent les muettes statistiques: tant d'hommes sont devenusfous, tant de seaux de vodka bus, tant d'enfants morts d'inanition. Et cetordre des choses est apparemment nécessaire; apparemment, l'homme heureux nese sent bien que parce que les malheureux portent leur fardeau en silence,et que, sans ce silence, le bonheur serait impossible. C'est une hypnosegénérale. Il faudrait que derrière la porte de chaque homme satisfait,heureux, se tienne quelqu'un armé d'un petit marteau dont les coups luirappelleraient sans cesse que les malheureux existent, que si heureux qu'ilsoit, la vie lui montrera tôt ou tard ses griffes, le malheur, la maladie,la pauvreté, les deuils, viendront s'abattre sur lui, et que personne a cemoment-la ne le verra ni ne l'entendra, comme lui maintenant n'entend et nevoit personne. Mais l'homme au marteau n'existe pas, l'homme heureux vit,les petits soucis quotidiens l’émeuvent légèrement, comme le vent fait bougerles feuilles du tremble et tout continue comme par le passé." %}
+
+{% include quote_template.html author="Charlie Chaplin" quote="Even now my voice is reaching millions throughout the world, millions of despairing men, women and little children, victims of a system that makes men torture and imprison innocent people.To those who can hear me, I say, do not despair.The misery that is now upon us is but the passing of greed, the bitterness of men who fear the way of human progress.The hate of men will pass, and dictators die, and the power they took from the people will return to the people and so long as men die, liberty will never perish.Soldiers! Don't give yourselves to brutes, men who despise you, enslave you, who regiment your lives, tell you what to do, what to think or what to feel!Who drill you, diet you, treat you like cattle, use you as cannon fodder.Don't give yourselves to these unnatural men, machine men with machine minds and machine hearts!You are not machines! You are not cattle! You are men! You have the love of humanity in your hearts.You don't hate! Only the unloved hate, the unloved and the unnatural!Soldiers! Don't fight for slavery! Fight for liberty!In the 17th Chapter of St. Luke it is written: 'the Kingdom of God is within man', not one man nor a group of men, but in all men!In you! You, the people have the power, the power to create machines.The power to create happiness! You, the people, have the power to make this life free and beautiful, to make this life a wonderful adventure.Then, in the name of democracy, let us use that power!Let us all unite! Let us fight for a new world, a decent world that will give men a chance to work, that will give youth the future and old age a security.By the promise of these things, brutes have risen to power, but they lie!They do not fulfill their promise; they never will.Dictators free themselves, but they enslave the people!Now, let us fight to fulfill that promise!Let us fight to free the world, to do away with national barriers, to do away with greed, with hate and intolerance.Let us fight for a world of reason, a world where science and progress will lead to all men's happiness.Soldiers! In the name of democracy, let us all unite!" %}
+
+{% include quote_template.html author="Peter Thiel" quote="Some example of how this works in practice. I've always used restaurants as the example of a terrible business. There's always some example...You're opening a restaurant business and no one wants to invest because you just loose money so you have to tell some idiocy sincrotic nerded and you'll say something like 'Well, we're the only British food restaurant in Paoelto.So it's British, Paoelto, and of course that's too small market because people may be to drive all the way to Manhatan View or either Mountain wall park Hmm, and there probably are no people who eat nothing but British food at least no people who are still alive.And so, that is a sort of a fictitiously narrow market.There's sort of a Hollywood version of this where the way movies always get passed...Ok, it's like College football star ...joins elite group of hackers...to catch the shark that killed his friend.So, that's a movie that has not yet been made but the question is 'Is that the right category' 'Is the correct category'.It's just another movie! In which case, there's a lot of those, it's super competitive, incredibly hard to make money, no one ever makes money in Hollywood." %}
+
+{% include quote_template.html author="Kari Stefansson" quote="If you cannot tell a story with your science, your science isn't worth a shit.I'm 63 and I think back on what is important in my life.I wish I would be a better man.I wish I had been a better husband and a better citizen.But I have told a certain story with my life, and, probably the mostinteresting aspect of that story are the discoveries that I've made in thescience lab the contribution I have made to the understanding of how man is put together." %}
+
+{% include quote_template.html author="Anonymous" quote="'Busyness' is a social defense against other people making us do things we don't really want to do and a mechanism for coping with feeling guilty about things we know we should do, but don't.  My intuition is that people have had to project themselves as busier and busier over the  last couple decades as technology has made us more efficient in order for this strategy to  continue working.If you're always 'so busy!', your boss is less likely to give you more work; your spouse is less likely to ask you to do more around the house; you're not going to feel as guilty about only seeing grandma once a year or refusing to help your friend move; you can feel a little better about yourself when a friend lands an awesome new job or plans a cool vacation and you haven't really done anything. When you haven't seen someone in a long time and they ask how things are, you can give them the impression that things must be even better than the last time you saw them, because you've clearly been so busy improving your lot in life. Well, that's the idea, at least.After I read that article I decided to try to be more honest with myself and the people I know about how busy I really was (which is often 'not very' - I, like the author, am the 'laziest ambitious person I know.'). It's a very hard habit to break, and it forces you to be more honest about the things you really want to spend your time on and the things you're avoiding." %}
+
+{% include quote_template.html author="Tim Kreider" quote="I can't help but wonder whether all this histrionic exhaustion isn't a way of covering up the fact that most of what we do doesn't matter." %}
+
+{% include quote_template.html author="Paul Graham" quote="Reading and experience train your model of the world. And even if you forget the experience or what you read, its effect on your model of the world persists. Your mind is like a compiled program you've lost the source of. It works, but you don't know why." %}
+
+{% include quote_template.html author="Stefan Molyneux" quote="A relationship will make you more of what you already are.A relationship will make you more than you are." %}
+
+{% include quote_template.html author="Anonymous" quote="Like self-esteem attracts like self-esteem." %}
+
+{% include quote_template.html author="Manga" quote="Those who have never been hurt don't truly understand what love is. Those whoendure hardships become strong and gentle. This path is necessary." %}
+
+{% include quote_template.html author="George Bernard Shaw" quote="In an ugly and unhappy world the richest man can purchase nothing but ugliness and unhappiness." %}
+
+{% include quote_template.html author="Jon Bon Jovi, Richie Sambora" quote="It's all the same, only the names will change" %}
+
+{% include quote_template.html author="Dan Meyer" quote="One of the worst things you can do is force people who don't feel pain to take your aspirin." %}
+
+{% include quote_template.html author="Anonymous" quote="It's easy to shit when your butt is full." %}
+
+{% include quote_template.html author=" Ivory Coast (Africa)" quote="Qui mange une noix de coco fait confiance à son anus." %}
+
+{% include quote_template.html author="Peter McGraw" quote="If you're both laughing, it means you see the world in the same way" %}
+
+{% include quote_template.html author="Patrick Louis" quote="You don't need anyone else to know but yourself." %}
+
+{% include quote_template.html author="Bill Whittle" quote="The people who are the best farmers should get the most land." %}
+
+{% include quote_template.html author="Bob Marley" quote="Who the cap fit let them wear it." %}
+
+{% include quote_template.html author="Everything is a remix" quote="When we copy we justify, when others copy we vilify" %}
