new post + markup fix

--- a/_includes/all_quotes.html
+++ b/_includes/all_quotes.html
@@ -81,3 +81,5 @@
 {% include quote_template.html author="Bob Marley" quote="Who the cap fit let them wear it." %}
 
 {% include quote_template.html author="Everything is a remix" quote="When we copy we justify, when others copy we vilify" %}
+
+{% include quote_template.html author=" Richard Dawkins " quote=" If there is a human moral to be drawn, it is that we must _teach_ our children altruism, for we cannot expect it to be part of their biological nature " %}
