--- a/_includes/header.html
+++ b/_includes/header.html
@@ -4,7 +4,7 @@
 					<li><a href="{{ site.url}}{{site.baseurl}}">Blog</a></li>
 					<li><a href="{{site.baseurl}}/about.html">About</a></li>
 					<li><a href="{{site.baseurl}}/projects.html">Projects</a></li>
-					<li><a href="{{site.baseurl}}/others.html">Others</li>
+					<li><a href="{{site.baseurl}}/others.html">Others</a></li>
 				</ul>
 			</nav>
 			<div id="logo_container">
