--- a/_includes/art_back_to.html
+++ b/_includes/art_back_to.html
@@ -1,5 +1,5 @@
-<span id='top-border-left'><img src='{{site.baseurl}}/assets/arts/art_border_content.svg'></img></span>
-<span id='top-border-right'><img src='{{site.baseurl}}/assets/arts/art_border_content.svg'></img></span>
-<a href="{{ site.url }}{{site.baseurl}}" id="back_to_blog"><img id="back_to_blog_img" src="{{site.baseurl}}/assets/arts/back_to_blog.svg"></img></a>
+<span id='top-border-left'><img alt='border' src='{{site.baseurl}}/assets/arts/art_border_content.svg'  /></span>
+<span id='top-border-right'><img  alt='border' src='{{site.baseurl}}/assets/arts/art_border_content.svg'  /></span>
+<a href="{{ site.url }}{{site.baseurl}}" id="back_to_blog"><img alt='backtoblog' id="back_to_blog_img" src="{{site.baseurl}}/assets/arts/back_to_blog.svg"  /></a>
 
 
