--- a/_includes/comments.html
+++ b/_includes/comments.html
@@ -1,5 +1,5 @@
 <div id="disqus_thread"></div>
-<script type="text/javascript" async="async" data-turbolinks-track="true">
+<script type="text/javascript">
 /* * * CONFIGURATION VARIABLES * * */
 var disqus_shortname = 'venamsblog';
 
