--- a/_includes/header_arts.html
+++ b/_includes/header_arts.html
@@ -15,5 +15,5 @@
 </script>
 <div class="wrapper_head">
 	<!--<h2> <a href="{{ site.url }}{{site.baseurl}}" id="blog_title">Back To Blog</a></h2>-->
-	<div id="art_title"><img id="art_title_img" src="{{site.baseurl}}/assets/arts/art_title.svg"></img></div>
+	<div id="art_title"><img alt="title" id="art_title_img" src="{{site.baseurl}}/assets/arts/art_title.svg"  /></div>
 </div>
