--- a/_layouts/art.html
+++ b/_layouts/art.html
@@ -18,7 +18,7 @@
 <!--
 	Here comes the sexy body
 -->
-  <body unresolved>
+  <body>
 
 	{% include header_arts.html %}
 
@@ -30,7 +30,6 @@
 			<div class="content" id="blog-content">
 				{% include art_back_to.html %}
 				{% include all_arts.html %}
-				{% include comments.html %}
 			</div>
 		</div>
 	</div>
