--- a/_layouts/food.html
+++ b/_layouts/food.html
@@ -17,7 +17,7 @@
 <!--
 	Here comes the sexy body
 -->
-  <body unresolved>
+  <body>
 	{% include header_food.html %}
 	<!--
 	 For the plant of the subject (not meat 'cause I'm vegetarian)
@@ -31,9 +31,9 @@
 						For more information please fill a comment below.
 					</div>
 				</header>
-				<article class="post-content">
+				<div class="post-content">
 					{% include all_foods.html %}
-				</article>
+				</div>
 			</div>
 		</div>
 		<div style='height:2ex' class='fancy_header_color2'></div>
