--- a/_includes/header_quotes.html
+++ b/_includes/header_quotes.html
@@ -3,9 +3,9 @@
 	The head of the arts
 -->
 <div class="wrapper_head">
-	<h2>
+	<div class="h2">
 		<div class="header_line_deco deco_left"></div>
 			<span id="section_title">Quotes</span>
 		<div class="header_line_deco deco_right"></div>
-	</h2>
+	</div>
 </div>
