--- a/_includes/quotes_head.html
+++ b/_includes/quotes_head.html
@@ -79,7 +79,9 @@
 	.deco_right, .end_quote {
 		float: right;
 	}
-	h2 {
+	.h2 {
+		font-weight: bold;
+		font-size: 20px;
 		text-align: center;
 		margin-bottom: 4em;
 	}
