new ascii art section

--- a/_includes/all_foods.html
+++ b/_includes/all_foods.html
@@ -60,6 +60,6 @@
 
 {% include recipe_template.html name="General Tsos's Chickpeas" img="32" description="" %}
 
-{% include recipe_template.html name="Homemade Pepper Powder" img="33" description="I've grown those hot pepper myself in my garden last summer. Naturally dried them over a long period, and recently crushed into powder" %}
+{% include recipe_template.html name="Homemade Pepper Powder" img="33" description="I've grown those hot peppers myself in my garden last summer. Naturally dried them over a long period, and recently crushed into powder" %}
 
-{% include recipe_template.html name="Burritos" img="34" description="This is a dish I made with my SO. It was fun to make a fun to eat. Very enjoyable savor." %}
+{% include recipe_template.html name="Burritos" img="34" description="This is a dish I made with my SO. It was fun to make and fun to eat. Very enjoyable savor." %}
