--- a/_includes/all_quotes.html
+++ b/_includes/all_quotes.html
@@ -83,3 +83,7 @@
 {% include quote_template.html author="Everything is a remix" quote="When we copy we justify, when others copy we vilify" %}
 
 {% include quote_template.html author=" Richard Dawkins " quote=" If there is a human moral to be drawn, it is that we must _teach_ our children altruism, for we cannot expect it to be part of their biological nature " %}
+
+{% include quote_template.html author="Mark Tway" quote="The best predictor of future behavior is past behavior" %}
+
+{% include quote_template.html author="Prefer not to say" quote="Deriving our conforts. We create human being and addict them to absolute craps. American Idols, the Olympics, baseball, football, go down the list, gambling, the lotterie. They are all propurtely silly, the waste of energy, lack of social valut produce. We could love making the world a better place. Instead we glorify falling down the hill. It's just absolutely ridiculous. It is so because we haven't admitted what we are: programmable bots. You push a bunch of buttons and you can enjoy anything. Stop glorifying the inner cockroach." %}
