--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -9,10 +9,9 @@
 			<ul class="foot_other">
 				<li><a href="{{site.baseurl}}/arts.html" >Arts</a></li>
 				<li><a href="{{site.baseurl}}/food.html" >Cooking</a></li>
-				<li><a href="{{site.baseurl}}/asciiart.html" >Ascii-Art</a></li>
+				<li><a href="{{site.baseurl}}/asciiart.html" >Screenshots &amp; Ascii-Art</a></li>
 				<li><a href="{{site.baseurl}}/poems.html" >Poems</a></li>
 				<li><a href="{{site.baseurl}}/quotes.html" >Quotes</a></li>
-				<li><a href="{{site.baseurl}}/Scrots.html" >Screenshots</a></li>
 				<li><a href="{{site.baseurl}}/Links.html" >Links</a></li>
 			</ul>
 			<hr/>
