--- a/_includes/others.html
+++ b/_includes/others.html
@@ -41,20 +41,12 @@
 	<a class="clickable colored big" href="{{site.baseurl}}/quotes.html" >Quotes</a>
 </div>
 <div class="about_section">
-	<span class="clickable colored big" onClick="showOther('scrots')" href="">Screenshots</span>
-	<span id="other_scrots"  class="hidden">
-		TODO
-	</span>
+	<a class="clickable colored big" href="{{site.baseurl}}/asciiart.html" >Screenshots &amp; Ascii-Arts</a>
 </div>
+
 <div class="about_section">
 	<span  class="clickable colored big" onClick="showOther('links')" href="">Links</span>
 	<span id="other_links" class="hidden">
-		TODO
-	</span>
-</div>
-<div class="about_section">
-	<span  class="clickable colored big" onClick="showOther('ascii-arts')" href="">Ascii-Arts</span>
-	<span id="other_ascii-arts" class="hidden">
 		TODO
 	</span>
 </div>
