--- a/_includes/asciiart_head.html
+++ b/_includes/asciiart_head.html
@@ -36,6 +36,9 @@
 		margin-bottom: 50px;
 	}
 
+	#section_title_content {
+		text-align: left;
+	}
 	#back_to_top {
 		z-index: 100;
 		position:fixed;
