--- a/_includes/header_asciiart.html
+++ b/_includes/header_asciiart.html
@@ -12,11 +12,13 @@
 ░░<br/>
 		</div>
 			<div id="section_title">
+				<span id="section_title_content">
 ▄▄▄&nbsp;▄▀▀▄▀▀▀▀█▀▀▄▄▄▄&nbsp;▄▄▄▄&nbsp;&nbsp;&nbsp;&nbsp;<br/>
 █&nbsp;▄&nbsp;▀&nbsp;█&nbsp;▄▀▀&nbsp;▐&nbsp;█▄&nbsp;&nbsp;▄&nbsp;▀&nbsp;▄&nbsp;█&nbsp;&nbsp;&nbsp;<br/>
 █&nbsp;▌&nbsp;&nbsp;█&nbsp;█▄▐▀▄▐&nbsp;█▄▀▄▐▀▄▀▐&nbsp;█&nbsp;&nbsp;&nbsp;<br/>
 ▓&nbsp;▌&nbsp;█&nbsp;▀▄▄▐&nbsp;&nbsp;▀&nbsp;▀&nbsp;&nbsp;▐▐&nbsp;&nbsp;&nbsp;▐&nbsp;▓&nbsp;&nbsp;&nbsp;<br/>
 ▒&nbsp;&nbsp;█&nbsp;░░&nbsp;&nbsp;&nbsp;░░░&nbsp;&nbsp;&nbsp;░&nbsp;&nbsp;&nbsp;░░▐&nbsp;▒&nbsp;&nbsp;&nbsp;<br/>
+				</span>
 			</div>
 		<div class='left'>
 ScreenShots &amp;<br/>
